infra/argocd/feedme/deployment-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedme-be
  namespace: feedme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedme-be
  template:
    metadata:
      labels:
        app: feedme-be
    spec:
      containers:
      - name: feedme-be
        image: adhasahar/feedme-sre-backend:latest
