infra/argocd/feedme/deployment-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedme-fe
  namespace: feedme
  labels:
    app: feedme-fe
    app.kubernetes.io/name: feedme-fe
    app.kubernetes.io/part-of: feedme
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedme-fe
  template:
    metadata:
      labels:
        app: feedme-fe
    spec:
      containers:
      - name: feedme-fe
        image: adhasahar/feedme-sre-frontend:latest
