infra/argocd/feedme/service-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedme-be
  namespace: feedme
  labels:
    app: feedme-be
    app.kubernetes.io/name: feedme-be
    app.kubernetes.io/part-of: feedme
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: feedme-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
