infra/argocd/feedme/service-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedme-fe
  namespace: feedme
spec:
  selector:
    app: feedme-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
