infra/argocd/feedme/service-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedme-mongodb
  namespace: feedme
spec:
  selector:
    app: feedme-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
