infra/argocd/feedme/ingress-be.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feedme-be
  namespace: feedme
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: feedme-be.adhshr.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feedme-be
            port:
              number: 80
