infra/argocd/feedme/ingress-fe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feedme-fe
  namespace: feedme
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: feedme.adhshr.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feedme-fe
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: feedme-be
            port:
              number: 80
