infra/argocd/feedme/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-nginx-ingress
  namespace: ingress-nginx
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: https
    cloudflare-tunnel-ingress-controller.strrl.dev/proxy-ssl-verify: "off"
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: "feedme.adhshr.xyz"
    http:
      paths:
      - backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 80
        path: /
        pathType: Prefix
