infra/argocd/feedme/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feedme-fe
  namespace: feedme
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: feedme.sre.adhshr.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feedme-fe
            port:
              number: 80
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: feedme-be
            port:
              number: 80
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-to-nginx-ingress
#   namespace: ingress-nginx
#   annotations:
#     cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: http
#     cloudflare-tunnel-ingress-controller.strrl.dev/proxy-ssl-verify: "off"
# spec:
#   ingressClassName: cloudflare-tunnel
#   rules:
#   - host: "*.adhshr.xyz"
#     http:
#       paths:
#       - backend:
#           service:
#             name: ingress-nginx-controller
#             port:
#               number: 80
#         path: /
#         pathType: Prefix
